--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/wall_runner
+script_dir=$base/lib/wall_runner
 [install]
-install-scripts=$base/lib/wall_runner
+install_scripts=$base/lib/wall_runner
